[package]
name = "rust_pid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.22.1"
bevy_egui = "0.24.0"
bevy_xpbd_3d = {version = "0.3.3", features = ["f32"]}
egui_plot = "0.24.0"
